[workspace]
members = ["programs/cbs-token-locker"]
resolver = "2"

[workspace.dependencies]
# Pin Solana BPF-compatible crates (platform-tools Cargo 1.84 cannot parse edition2024).
blake3 = "=1.8.2"
constant_time_eq = "=0.3.1"
proc-macro-crate = "=3.2.0"
indexmap = "=2.11.4"
unicode-segmentation = "=1.12.0"

[profile.release]
overflow-checks = true
